ready to integrate w mongodb iterator

--- a/static/newHeatmap.html
+++ b/static/newHeatmap.html
@@ -3,6 +3,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script>
+        var coordinatesData = '{{ data }}';
+    </script>
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
