--- a/static/newHeatmap.html
+++ b/static/newHeatmap.html
@@ -4,6 +4,7 @@
 <html>
   <head>
     <script>
+        // pass in 'data' from flask and convert to a JSON form
         var coordinatesData = '{{ data }}';
     </script>
     <style>
@@ -36,16 +37,30 @@
 
         // This example uses a local copy of the GeoJSON stored at
         // http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_week.geojsonp
-        script.src = 'https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js';
+        // put the location of the JSON file or object
+        //script.src = 'https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js';
+
+        script.src = coordinatesData;
+
+        // maybe do "document.getElementsByTagName('head')[0].appendChild(script);"
         document.getElementsByTagName('head')[0].appendChild(script);
 
       }
 
+      // results I guess is from document, document (and hence results) in this case is the actual GeoJSON file
+      // need to modify code above
       function eqfeed_callback(results) {
         var heatmapData = [];
+        // features.length is the amount of locations in the geoJSON file
+        // can modify code to fit array length of 'data' from flask
         for (var i = 0; i < results.features.length; i++) {
+          // coords get coordinates (lat. and long.) from results, which comes from document
+          // for example, the line below will get the coordinates from a location entry that has the field "geometry":
+          // ..., "geometry":{"type":"Point","coordinates":[-178.3725,-20.753,544.19]}, ...
           var coords = results.features[i].geometry.coordinates;
+          // LatLng basically just takes a lat. and long., here it gets it from the coords var
           var latLng = new google.maps.LatLng(coords[1], coords[0]);
+          // from this line below its kinda obvious, its basically the actual heat map being created
           heatmapData.push(latLng);
         }
         var heatmap = new google.maps.visualization.HeatmapLayer({
